k8s/user/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-user
  namespace: hospital
  labels:
    app: hospital-user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-user
  template:
    metadata:
      labels:
        app: hospital-user
    spec:
      containers:
        - name: hospital-user
          image: ashrafkhan0277/hospital-user:56
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
