k8s/user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-user-svc
  namespace: hospital
  labels:
    app: hospital-user
spec:
  type: ClusterIP
  selector:
    app: hospital-user
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
