k8s/user/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-user-ingress
  namespace: hospital
  labels:
    app.kubernetes.io/part-of: hospital
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: 44.205.19.225.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hospital-user-svc
                port:
                  number: 80
